# Crackle

./: CMakeLists.txt  Driver.cpp  Driver.hpp  README.md  ast_printer.cpp  debug.h  driver.cpp  driver.hpp  function_symbol_table.c  function_symbol_table.h  interpreter.c  interpreter.h  lexer.l  lexer.yy.cc  main.cpp  makefile  parser.h  parser.hpp  parser.y  parser.yy  scanner.hpp  scanner.ll  symbol_table.c  symbol_table.h  symbols.c  symbols.h  types.c  types.cpp  types.h
headers/: Heap.hpp  SymbolTable.hpp  ast_printer.hpp  interpreter.h  node_helpers.h  node_helpers.hpp  symbol_table.hpp  types.h  types.hpp
io/: avl_input.txt  pop_debug.txt  pop_input.txt
main/: CMakeLists.txt  main.cpp
samples/: recursive_fibonacci.txt
sources/: AstPrinter.cpp  Heap.cpp  ast_printer.cpp  function_symbol_table.c  interpreter.c  interpreter.cpp  node_helpers.c  node_helpers.cpp  symbol_table.c  symbol_table.cpp  types.c  types.cpp
src/: CMakeLists.txt  Driver.cpp  Driver.hpp  FlexLexer.h  parser.hpp  parser.yy  scanner.hpp
src/headers/: AstPrinter.hpp  Heap.hpp  SymbolTable.hpp  node_helpers.hpp  types.hpp
src/nodes/: DataType.cpp  DataType.h  node_types.h  xConstantNode.cpp  xConstantNode.h  xEmptyNode.cpp  xEmptyNode.h  xFunctionDefNode.cpp  xFunctionDefNode.h  xFunctionNode.cpp  xFunctionNode.h  xNode.cpp  xNode.h  xObjectDefNode.cpp  xObjectDefNode.h  xObjectNode.cpp  xObjectNode.h  xOperatorNode.cpp  xOperatorNode.h  xReturnNode.cpp  xReturnNode.h  xVariableDefNode.cpp  xVariableDefNode.h  xVariableNode.cpp  xVariableNode.h
src/nodes/constant/: xConstantBoolNode.cpp  xConstantBoolNode.h  xConstantDoubleNode.cpp  xConstantDoubleNode.h  xConstantIntNode.cpp  xConstantIntNode.h  xConstantObjectNode.cpp  xConstantObjectNode.h  xConstantStringNode.cpp  xConstantStringNode.h  xConstantVoidNode.cpp  xConstantVoidNode.h
src/sources/: AstPrinter.cpp  Heap.cpp  SymbolTable.cpp  node_helpers.cpp  node_types.cpp  types.cpp
test/: CMakeLists.txt  DriverTest.cpp  DriverTest.hpp  io_test.hpp  main.cpp
test/tests/in/: avl.txt  iterative_fibonacci.txt
